speed UI remove

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 
   <!-- index.html에 추가할 부분 -->
 <div id="ui">
-  <div id="speedDisplay">Speed: 0</div>
   <div id="gameOverMessage" style="display: none;">🚗 Game Over!</div>
 </div>
 
-<!-- 예시
-<div id="speed" style="position: absolute; top: 10px; left: 10px; color: white; font-size: 20px;"></div> -->
+<div id="hearts">
+  <img src="public/models/heart.png" id="heart1" style="width:40px;">
+  <img src="public/models/heart.png" id="heart2" style="width:40px;">
+  <img src="public/models/heart.png" id="heart3" style="width:40px;">
+</div>
+
+
 
 
 <style>
