화면 스크롤 제거

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <title>부산행 게임</title>
 
   <style>
+     html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* 스크롤 제거 */
+    width: 100%;
+    height: 100%;
+  }
+
+  canvas {
+    display: block; /* 캔버스 여백 제거 */
+  }
     #ui {
       position: absolute;
       top: 20px;
