거리 표시 기능 추가

--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
     }
 
     #gameOverMessage {
-      margin-top: 10px;
-      color: red;
-      font-size: 400px;
-      /* 글자 크기 크게 */
-      font-weight: bold;
-      /* 굵게 */
-      text-shadow: 2px 2px 4px black;
-      /* 그림자 효과로 더 잘 보이게 */
-    }
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.85);
+  color: white;
+  padding: 20px 40px;
+  border-radius: 12px;
+  text-align: center;
+  z-index: 999;
+  flex-direction: column;
+  align-items: center;
+}
+
 
     #hearts {
       position: absolute;
@@ -51,13 +56,23 @@
       gap: 15px;
     }
 
+    #distance-display {
+  background-color: white;
+  color: black;
+  font-size: 18px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  font-weight: bold;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2); /* 선택사항: 약간의 그림자 */
+}
+
     #info-popup {
       position: fixed;
       top: 25%;
       left: 50%;
       transform: translate(-50%, -50%);
       background: rgba(0, 0, 0, 0.85);
-      color: rgb(27, 199, 226);
+      color: rgb(255, 255, 255);
       padding: 20px;
       border-radius: 12px;
       z-index: 100;
@@ -107,11 +122,17 @@
 
   <!-- UI 영역 -->
   <div id="ui">
-    <div id="gameOverMessage" style="display: none;">🚗 Game Over!</div>
+    <div id="gameOverMessage" style="display: none;">🚗 Game Over!
+        <div id="finalDistance" style="margin-top: 10px;"></div>
+    </div>
   </div>
+
+
 
   <!-- 하트 + 설명 버튼 -->
   <div id="hearts">
+      <div id="distance-display">거리: 0m</div>
+
     <img src="public/models/heart.png" id="heart1" style="width:60px;">
     <img src="public/models/heart.png" id="heart2" style="width:60px;">
     <img src="public/models/heart.png" id="heart3" style="width:60px;">
@@ -124,7 +145,13 @@
   <div id="info-popup" style="display: none;">
     <div class="popup-content">
       <h2>게임 설명</h2>
-      <p>화살표 키로 자동차를 조작하며 좀비를 피하세요.<br>하트가 0이 되거나 길을 벗어나 떨어지면 게임 오버입니다.</p>
+      <p>화살표 키로 자동차를 조작하며 좀비를 피하세요.<br>하트가 0이 되거나 길을 벗어나 떨어지면 게임 오버입니다.<br>
+      <br><strong>[조작 키 안내]</strong><br>
+  ⬆ (W): 가속<br>
+  ⬇ (S): 감속<br>
+  ⬅ (A): 왼쪽으로 회전<br>
+  ➡ (D): 오른쪽으로 회전
+      </p>
       <button id="close-info">닫기</button>
     </div>
   </div>
